# fdray

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
api/fdray/: index.html  typing.html
docs/: camera.md  index.md
docs/notebooks/: camera.ipynb
docs/tutorial/: camera.md  light_source.md
docs/usage/: camera.md  light_source.md
notebooks/: camera.ipynb  normal.ipynb  pigment.ipynb  region.ipynb  sphere_sweep.ipynb  test.ipynb
notebooks/data/: field.ipynb  uv_mapping.ipynb
notebooks/media/: interior.ipynb
notebooks/movie/: camera.ipynb
notebooks/object/: primitives.ipynb  transformations.ipynb
notebooks/scene/: camera.ipynb
notebooks/texture/: finish.ipynb  interior-texture.ipynb  interior_texture.ipynb  pattern.ipynb  pigment.ipynb
notebooks/tutorial/: camera.ipynb
notebooks/video/: camera.ipynb
search/: search_index.json
src/: fdray.html
src/fdray/: __init__.py  attribute.py  attributes.py  camera.py  color.py  colors.py  core.html  core.py  data.html  elements.py  format.py  index.html  light_source.py  media.py  object.py  region.py  renderer.py  scene.py  shapes.py  texture.py  transformable.py  typing.html  typing.py  utils.html  (+2 more)
tests/: test_attributes.py  test_camera.py  test_color.py  test_colors.py  test_elements.py  test_format.py  test_light_source.py  test_pigment.py  test_region.py  test_renderer.py  test_scene.py  test_shapes.py  test_transformable.py  test_utils.py  test_vector.py
tutorial/: camera.html  light_source.html
(+172 files in other folders)
